# srsi_ET-vis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: index.html
docs/css/: site.css
docs/js/: site.js  topics-data.js
docs/topics/: attention.html  cnn.html  mdp3.html  rnn.html
scripts/: render_all.sh  sync_site_videos.sh
topics/attention/theory/: context_output.py  qkv_dims.py  qkv_scores.py  scores_softmax.py  why_attention.py
topics/cnn/: __init__.py
topics/cnn/theory/: architecture.py  convolution.py  padding_stride.py  pooling.py  pretrained.py  why_cnn.py
topics/mdp3/theory/: dpp_volume.py
topics/rnn/: branding.py
topics/rnn/theory/: cell_math.py  tasks.py  unroll.py  why_rnn.py
