[project]
name = "srsi-et-vis"
version = "0.1.0"
description = "SRSI Emerging Technologies Track — Manim visualizations + GitHub Pages hub"

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "manim>=0.20.1",
    "numpy>=1.26",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = []
